--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "pdfjs-dist": "",
     "converse.js": "https://github.com/magenta-aps/converse.js.git#master",
     "ng-ckeditor": "ng.ckeditor#^2.0.2",
-    "angular-material-data-table": "^0.10.10"
+    "angular-material-data-table": "^0.10.10",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.x"
