--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-translate": "",
     "angular-translate-loader-static-files": "",
     "@uirouter/angularjs": "",
+    "angular-ui-router": "1.0.10",
     "angular-cookies": "^1.6.x",
     "angular-fixed-table-header": "",
     "angular-i18n": "",
@@ -33,7 +34,6 @@
     "material-wizard": "",
     "pdfjs-dist": "",
     "angular-material-data-table": "^0.10.10",
-    "moment": "^2.18.1",
     "ng-file-upload": "^12.2.13"
   },
   "devDependencies": {
