--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "angular-route": "^1.6.x",
     "angular-sanitize": "1.6.x",
     "angular-swfobject": "",
-    "angular-translate": "",
+    "angular-translate": "~2.16.0",
     "angular-translate-loader-static-files": "",
     "@uirouter/angularjs": "",
     "angular-cookies": "^1.6.x",
