--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,8 @@
   "private": true,
   "dependencies": {
     "angular": "^1.6.x",
-    "angular-animate": "1.6.x",
-    "angular-aria": "1.6.x",
+    "angular-animate": "^1.6.x",
+    "angular-aria": "^1.6.x",
     "angular-messages": "^1.6.x",
     "angular-encode-uri": "",
     "angular-file-saver": "",
@@ -31,7 +31,6 @@
     "angular-auto-height": "https://github.com/m43nu/angular-auto-height.git",
     "checklist-model": "~0.9.0",
     "isteven-angular-multiselect": "3.0.0",
-    "material-wizard": "",
     "pdfjs-dist": "",
     "angular-material-data-table": "^0.10.10",
     "ng-file-upload": "^12.2.13"
