--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-markdown": "~1.2.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-nsp": "~2.4.0",
     "gulp-pa11y": "0.0.4",
     "gulp-protractor": "^1.0.0",
     "gulp-rename": "^1.2.2",
@@ -30,25 +31,14 @@
     "gulp-wrap": "^0.11.0",
     "gulp-xml2json": "^0.1.5",
     "http-proxy-middleware": "^0.9.1",
-    "jshint-stylish": "^2.0.1",
-    "karma": "~0.13",
-    "karma-jasmine": "^0.3.6",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.18",
-    "protractor": "^4.0.14",
     "shelljs": "^0.2.6",
     "yargs": "^3.31.0"
   },
   "scripts": {
     "postinstall": "bower update",
-    "prestart": "npm update",
-    "test": "protractor app/tests/e2e/conf.js",
-    "test-loaddata": "protractor app/tests/e2e/loaddata_conf.js"
+    "prestart": "npm update"
   },
   "dependencies": {
-    "gulp-install": "^0.6.0",
-    "gulp-nsp": "~2.4.0",
     "moment": "^2.18.1"
   }
 }
