--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "gulp-markdown": "~1.2.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^1.1.0",
-    "gulp-nsp": "~2.4.0",
     "gulp-pa11y": "0.0.4",
     "gulp-protractor": "^1.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev-all": "^2.0.3",
+    "gulp-rev-napkin": "^0.1.0",
     "gulp-sass": "^2.0.4",
     "gulp-static-site": "0.0.7",
     "gulp-strip-debug": "^1.0.2",
