--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "repository": "https://github.com/magenta-aps/OpenDESK-UI",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.1",
-    "gulp": "^3.9.0",
+    "bower": "^1.8.12",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-change": "^1.0.0",
     "gulp-concat": "^2.6.0",
@@ -25,7 +25,7 @@
     "gulp-static-site": "0.0.7",
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.4.1",
-    "gulp-util": "^3.0.6",
+    "gulp-util": "^3.0.8",
     "gulp-webserver": "^0.9.1",
     "gulp-wrap": "^0.11.0",
     "gulp-xml2json": "^0.1.5",
@@ -39,6 +39,8 @@
   },
   "dependencies": {
     "angular-popeye": "^1.0.5",
-    "moment": "^2.28.0"
+    "del": "^6.0.0",
+    "gulp-cli": "^2.3.0",
+    "moment": "^2.29.1"
   }
 }
