--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "isteven-angular-multiselect": "3.0.0",
     "pdfjs-dist": "",
     "angular-material-data-table": "^0.10.10",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "ui-cropper" : ""
   },
   "devDependencies": {
     "angular-mocks": "^1.6.x"
