--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "pdfjs-dist": "",
     "angular-material-data-table": "^0.10.10",
     "ng-file-upload": "^12.2.13",
-    "ui-cropper" : ""
+    "ui-cropper" : "",
+    "print-js": "^1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.x"
