--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/magenta-aps/OpenDESK-UI",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.8.12",
+    "bower": "^1.8.13",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-change": "^1.0.0",
@@ -21,7 +21,7 @@
     "gulp-pa11y": "0.0.4",
     "gulp-protractor": "^4.1.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^4.1.1",
     "gulp-static-site": "0.0.7",
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.4.1",
@@ -41,6 +41,7 @@
     "angular-popeye": "^1.0.5",
     "del": "^6.0.0",
     "gulp-cli": "^2.3.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "print-js": "^1.6.0"
   }
 }
