--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prestart": "npm update"
   },
   "dependencies": {
+    "angular-filter": "^0.5.17",
     "angular-popeye": "^1.0.5",
     "del": "^6.0.0",
     "gulp-cli": "^2.3.0",
