--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-messages": "^1.6.x",
     "angular-encode-uri": "",
     "angular-file-saver": "",
+    "angular-filter": "",
     "angular-filemanager": "^1.5.x",
     "angular-img-fallback": "~0.1.3",
     "angular-material": "1.1.x",
